// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Category.svelte > should render using default props 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 1`] = `
<div>
  <section
    class="custom-class"
  >
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 2`] = `
<div>
  <section
    class="custom-class-2"
  >
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="horizontal"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="section"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 1`] = `
<div>
  <section>
    <!---->
    <!---->
    <div
      aria-disabled="false"
      aria-label="Toggle Switch"
      aria-orientation="horizontal"
      data-switch-compact="false"
      data-switch-off="false"
      data-switch-on="false"
      data-switch-root=""
      role="listbox"
      tabindex="0"
    >
      <div
        aria-selected="false"
        class="relative"
        data-path="0"
        data-switch-item=""
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
        
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
      </div>
      <div
        aria-selected="false"
        class="relative"
        data-path="1"
        data-switch-item=""
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
        
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
      </div>
      <div
        aria-selected="false"
        class="relative"
        data-path="2"
        data-switch-item=""
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
        
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
      </div>
      
    </div>
    
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="center"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="right"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root="true"
      role="tablist"
      tabindex="0"
    >
      <!---->
      <div
        data-tabs-placeholder=""
      >
        Select a tab to view its content.
      </div>
      
      <!---->
       
      <div
        data-tabs-list=""
      >
        <button
          aria-controls="tab-panel-0"
          aria-selected="false"
          data-path="0"
          data-tabs-trigger=""
          id="tab-0"
          role="tab"
          tabindex="0"
        >
          one
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-1"
          aria-selected="false"
          data-path="1"
          data-tabs-trigger=""
          id="tab-1"
          role="tab"
          tabindex="0"
        >
          two
          <!---->
           
          <!---->
        </button>
        <button
          aria-controls="tab-panel-2"
          aria-selected="false"
          data-path="2"
          data-tabs-trigger=""
          id="tab-2"
          role="tab"
          tabindex="0"
        >
          three
          <!---->
           
          <!---->
        </button>
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-labelledby="tab-0"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-0"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-1"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-1"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <div
        aria-labelledby="tab-2"
        class="hidden"
        data-tabs-panel=""
        id="tab-panel-2"
        role="tabpanel"
      >
        <div
          data-tabs-content=""
        >
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;
